# docs/swagger.json
@@ -10,6 +10,49 @@
     "basePath": "/api/v1",
     "paths": {
         "/users": {
+            "get": {
+                "description": "Get user with optional filters",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get users",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Type",
+                        "name": "type",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Tag",
+                        "name": "tag",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.UserResponseDTO"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
             "post": {
                 "description": "Create a new user with given body",
                 "consumes": [
@@ -48,6 +91,41 @@
                     }
                 }
             }
+        },
+        "/users/{username}": {
+            "get": {
+                "description": "Get user with given username or get a 404 error",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get user by his username",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Username",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.UserResponseDTO"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -71,6 +149,9 @@
                 },
                 "rating": {
                     "type": "integer"
+                },
+                "type": {
+                    "type": "string"
                 },
                 "username": {
                     "type": "string"
@@ -96,6 +177,9 @@
                     "type": "integer"
                 },
                 "tags": {
+                    "type": "string"
+                },
+                "type": {
                     "type": "string"
                 },
                 "username": {
